# cmetal

./: .clings-state.txt  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  VISION.md  build.rs  info.toml
.github/workflows/: ci.yml  pages.yml  release.yml
book/: README.md  book.toml
book/src/: SUMMARY.md  introduction.md
exercises/00_intro/: intro1.c
exercises/01_pointers/: pointers1.c  pointers2.c
exercises/02_memory/: memory1.c  memory2.c  memory3.c
exercises/03_undefined_behavior/: ub1.c  ub2.c  ub3.c  ub4.c
exercises/04_preprocessor/: preprocessor1.c
exercises/05_ub_lab/: ub_lab1.c  ub_lab2.c  ub_lab3.c  ub_lab4.c  ub_lab5.c  ub_lab6.c
exercises/06_strings/: strings1.c  strings2.c  strings3.c
exercises/07_structs/: structs1.c  structs2.c  structs3.c
exercises/08_function_pointers/: function_pointers1.c  function_pointers2.c  function_pointers3.c
exercises/09_const/: const1.c  const2.c  const3.c
exercises/10_error_handling/: error_handling1.c  error_handling2.c  error_handling3.c
exercises/11_bitwise/: bitwise1.c  bitwise2.c  bitwise3.c
exercises/12_encodings/: encodings1.c  encodings2.c  encodings3.c
exercises/13_tagged_unions/: tagged1.c  tagged2.c  tagged3.c  tagged4.c
exercises/14_hash_tables/: hash1.c  hash2.c  hash3.c  hash4.c  hash5.c
exercises/15_arenas/: arena1.c  arena2.c  arena3.c
exercises/16_gc/: gc1.c  gc2.c  gc3.c
exercises/17_nan_boxing/: nanbox1.c  nanbox2.c  nanbox3.c
exercises/18_bytecode/: bytecode1.c  bytecode2.c  bytecode3.c
exercises/19_capstone/: capstone1.c  capstone2.c  capstone3.c
include/: clings_alloc.h  clings_test.h  cmetal_alloc.h  cmetal_test.h
scripts/: autosolver.py  check_exercises.py  simulate_learner.py  solutions_codec.py
scripts/hooks/: pre-push
solutions/00_intro/: intro1.c.enc
solutions/01_pointers/: pointers1.c.enc  pointers2.c.enc
solutions/16_gc/: gc1.c.enc  (+2 more)
src/: app_state.rs  commands.rs  compiler.rs  errors.rs  exercise.rs  info_file.rs  main.rs  runner.rs  solutions.rs  term.rs  view.rs  watch.rs  workspace.rs
tests/: integration.rs
(+66 files in other folders)
