[package]
name = "cmetal"
version = "0.4.0"
edition = "2021"
description = "Small exercises to learn advanced C concepts - inspired by rustlings"
license = "MIT"
repository = "https://github.com/cdelmonte-zg/cmetal"
homepage = "https://cdelmonte-zg.github.io/cmetal/"
documentation = "https://cdelmonte-zg.github.io/cmetal/"
readme = "README.md"
keywords = ["c", "learning", "exercises", "rustlings", "sanitizers"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
notify = "7"
notify-debouncer-mini = "0.5"
crossterm = "0.28"
anyhow = "1"
base64 = "0.22"
console = "0.15"
tar = "0.4"
flate2 = "1"
similar = "2"

[build-dependencies]
tar = "0.4"
flate2 = "1"

[dev-dependencies]
tempfile = "3"
